infrastructures/istio/school-service-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: school-service-route
  namespace: staging
spec:
  hosts:
    - school-service
  http:
    - route:
        - destination:
            host: school-service
            subset: v1
          weight: 50
        - destination:
            host: school-service
            subset: v2
          weight: 50
